[package]
name = "blingfire"
version = "0.3.1"
authors = ["reinfer Ltd. <eng@reinfer.io>"]
edition = "2018"
description = "Wrapper for the BlingFire tokenization library"
homepage = "https://github.com/reinfer/blingfire-rs"
repository = "https://github.com/reinfer/blingfire-rs"
keywords = [
    "nlp",
    "tokenizer",
    "machine-learning",
    "blingfire",
]
license = "MIT"
build = "build.rs"

[dependencies]
blingfire-sys = { path = "../blingfire-sys", version = "0.2.1" }
snafu = "0.4.3"

[build-dependencies]
skeptic = "0.13.4"

[dev-dependencies]
skeptic = "0.13.4"
