[package]
name = "blingfire"
version = "1.0.1"
authors = ["reinfer Ltd. <eng@reinfer.io>"]
edition = "2018"
description = "Wrapper for the BlingFire tokenization library"
homepage = "https://github.com/reinfer/blingfire-rs"
repository = "https://github.com/reinfer/blingfire-rs"
keywords = [
    "nlp",
    "tokenizer",
    "machine-learning",
    "blingfire",
]
license = "MIT"
build = "build.rs"

[dependencies]
blingfire-sys = { path = "../blingfire-sys", version = "1.0.1" }
snafu = "0.6.8"

[build-dependencies]
skeptic = "0.13.4"

[dev-dependencies]
skeptic = "0.13.4"
